--- a/toronto-neighborhoods-dataframe.ipynb
+++ b/toronto-neighborhoods-dataframe.ipynb
@@ -16,31 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: beautifulsoup4 in /anaconda/lib/python3.5/site-packages (4.4.1)\n",
-      "\u001b[33mYou are using pip version 18.0, however version 19.2.3 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "Requirement already satisfied: lxml in /anaconda/lib/python3.5/site-packages (3.6.0)\n",
-      "\u001b[33mYou are using pip version 18.0, however version 19.2.3 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "Requirement already satisfied: requests in /anaconda/lib/python3.5/site-packages (2.14.2)\n",
-      "\u001b[33mYou are using pip version 18.0, however version 19.2.3 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install beautifulsoup4\n",
-    "!pip install lxml\n",
-    "!pip install requests\n",
+    "#!pip install beautifulsoup4\n",
+    "#!pip install lxml\n",
+    "#!pip install requests\n",
     "import bs4 as bs\n",
     "import requests\n",
     "import pandas as pd"
